--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "drupal/core-composer-scaffold": "^10.5",
         "drupal/core-project-message": "^10.5",
         "drupal/core-recommended": "^10.5",
+        "drupal/devel": "^5.4",
+        "drupal/mahi": "^1.1",
+        "drupal/vani": "^11.0",
         "drush/drush": "^12.5"
     },
     "conflict": {
